--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   letter-spacing: .1em;
   background: var(--light);
   color: var(--dark);
-  font-family: 'Poiret One', cursive;
+  font-family: 'Roboto', sans-serif;
 
 }
 
@@ -92,7 +92,7 @@ a:hover {
 }
 
 header {
-  background: var(--dark);
+  background: #0000FF;
 }
 
 header a {
